admin can add farm, user can apply for credit
